--- a/202393_GONZALES_MIGUEL_PLAYINGWITHFUNCTIONS.ipynb..ipynb
+++ b/202393_GONZALES_MIGUEL_PLAYINGWITHFUNCTIONS.ipynb..ipynb
@@ -31,39 +31,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "10f6f79b",
+   "execution_count": 6,
+   "id": "d40ac59a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please Enter the passphrase:Migs\n",
-      "1\n"
+      "Enter the passphrase:joben\n",
+      "Enter the passphrase:chums\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "###PROBLEM2\n",
-    "def problem_2 (passphrase):\n",
-    "    counter=1\n",
-    "    while True:\n",
-    "        user_input=input(\"Please Enter the passphrase:\")\n",
-    "        if user_input==passphrase:\n",
-    "            print(int(1))\n",
-    "            break\n",
-    "        elif user_input!=passphrase:\n",
-    "            while counter<3:\n",
-    "                print(\"Please try again\")\n",
-    "                user_input=input(\"Please Enter the passphrase:\")\n",
-    "                counter=counter+1\n",
-    "                 \n",
-    "            else:\n",
-    "                return(int(0))\n",
-    "                break\n",
-    "problem_2(\"Migs\")\n",
-    "                "
+    "### Problem 2 (2.0)\n",
+    "def problem_2(passphrase):\n",
+    "    counter=0\n",
+    "    while counter <3:\n",
+    "        user_input=input(\"Enter the passphrase:\")\n",
+    "        if user_input != passphrase:\n",
+    "            counter+=1\n",
+    "        elif user_input==passphrase:\n",
+    "            return 1\n",
+    "    if counter==3:\n",
+    "        return 0\n",
+    "problem_2(\"chums\")\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -129,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "e2ce7b24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1P:1 /25C : 0 /10C: 0 /5C: 0 /1C: 0'"
+       "'1P:1 /25C:0 /10C:0 /5C:0 /1C:0'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +159,7 @@
     "    sampu= int((amount - piso*100- bente*25)/10)\n",
     "    lima = int ((amount-piso*100- bente*25 - sampu*10)/5)\n",
     "    centimo = int(amount-piso*100- bente*25 - sampu*10 - lima*5)\n",
-    "    return f\"1P:{piso} /25C : {bente} /10C: {sampu} /5C: {lima} /1C: {centimo}\"\n",
+    "    return f'1P:{piso} /25C:{bente} /10C:{sampu} /5C:{lima} /1C:{centimo}'\n",
     "problem_4(100)"
    ]
   },
